--- a/views/author/view copy.ejs
+++ b/views/author/view copy.ejs
@@ -28,7 +28,7 @@
                             <span>
                                 <% for (b of books) { %>
                                     <a href="/book/view/<%= b.slug %>">
-                                        <%= b.title %>
+                                        <%= b.title %> (<%= books.indexOf(b) + 1 %>)
                                         <%= books.indexOf(b) < author.books.length - 1 ? ', ' : '' %>
                                     </a>
                                 <% } %>
@@ -44,9 +44,14 @@
                 <div class="row">
                     <% for (b of books) { %>
                         <div class="col-md-4" style="width: 100; height: 150;">
-                            <a href="/book/view/<%= b.slug %>">
-                                <img class="img-thumbnail rounded" src="<%= b.coverUrl %>" alt="<%= b.title %>">
-                            </a>
+                            <img class="img-thumbnail rounded" src="<%= b.coverUrl %>" alt="<%= b.title %>">
+                            <span>
+                                <center>
+                                    <a href="/book/view/<%= b.slug %>">
+                                        (<%= books.indexOf(b) + 1 %>)
+                                    </a>
+                                </center>
+                            </span>
                         </div>
                         
                     <% } %>
