--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8210,7 +8210,8 @@ h1, h2, h3, h4, h5,
 
 .hero-wrap {
   width: 100%;
-  height: 700px;
+  /* height: 700px; */
+  height: 500px;
   position: inherit;
   background-size: cover;
   background-repeat: no-repeat;
